--- a/Cimob/Views/Contactos/Create.cshtml
+++ b/Cimob/Views/Contactos/Create.cshtml
@@ -39,7 +39,7 @@ Horário de Funcionamento de atendimento por Skype:<br />
                 <span asp-validation-for="Assunto" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Descriçao" class="form-control" placeholder="Descriço" style="height: 100px;" />
+                <input asp-for="Descriçao" class="form-control" placeholder="Descrição" style="height: 100px;" />
                 <span asp-validation-for="Descriçao" class="text-danger"></span>
             </div>
 
